@@ -5,7 +5,7 @@ verifSuccess=This message is signed with a good key of
 cryptFailed=Crypt failed. Unknown error.
 decryptFailed=Decrypt failed. Unknown error.
 decryptFailedPassword=Decrypt failed. The password isn't good.
-passwordDialogEnterPrivateKey=Enter your private key :
+passwordDialogEnterPrivateKey=Enter your private key' password :
 youMustEnterPassword=You must enter a password !
 choosePublicKeyTitle=FireGPG - public key
 choosePublicKeyDescription=Choose the public key :
